crates/opi-tui/tests/snapshots/tui_snapshots__input_editor_empty_80x3.snap
---
source: crates/opi-tui/tests/tui_snapshots.rs
assertion_line: 78
expression: "render(editor, 80, 3)"
---
┌ Input ───────────────────────────────────────────────────────────────────────┐
│Type a message...                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
