crates/opi-tui/tests/snapshots/tui_snapshots__input_editor_with_text_80x3.snap
---
source: crates/opi-tui/tests/tui_snapshots.rs
assertion_line: 72
expression: "render(editor, 80, 3)"
---
┌ Input ───────────────────────────────────────────────────────────────────────┐
│help me refactor this code                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
