crates/opi-tui/tests/snapshots/tui_snapshots__message_list_empty_80x10.snap
---
source: crates/opi-tui/tests/tui_snapshots.rs
assertion_line: 62
expression: "render(widget, 80, 10)"
---
┌ Messages ────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
