crates/opi-tui/tests/snapshots/tui_snapshots__shell_idle_empty_80x24.snap
---
source: crates/opi-tui/tests/tui_snapshots.rs
assertion_line: 152
expression: "render(shell, 80, 24)"
---
┌ Messages ────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 claude-sonnet-4-5-20250514 [idle]
┌ Input ───────────────────────────────────────────────────────────────────────┐
│Type a message...                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
