crates/opi-tui/tests/snapshots/tui_snapshots__shell_thinking_with_tool_80x24.snap
---
source: crates/opi-tui/tests/tui_snapshots.rs
assertion_line: 187
expression: "render(shell, 80, 24)"
---
┌ Messages ────────────────────────────────────────────────────────────────────┐
│You: Search for TODOs in the codebase.                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ tool: grep ──────────────────────────────────────────────────────────────────┐
│args: {"pattern": "TODO"}                                                     │
│status: running                                                               │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 claude-sonnet-4-5-20250514 [thinking...] | 250 tokens
┌ Input ───────────────────────────────────────────────────────────────────────┐
│Type a message...                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
