crates/opi-tui/tests/snapshots/tui_snapshots__shell_with_conversation_120x40.snap
---
source: crates/opi-tui/tests/tui_snapshots.rs
assertion_line: 209
expression: "render(shell, 120, 40)"
---
┌ Messages ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│You: Hello!                                                                                                           │
│Asst: Hi! How can I help?                                                                                             │
│You: Can you search for all Rust files?                                                                               │
│Asst: I found 15 Rust files in the workspace.                                                                         │
│You: Show me the main one.                                                                                            │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 claude-sonnet-4-5-20250514 [idle] | 520 tokens
┌ Input ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│What does the main function do?                                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
